Added access permissions in manifests and created more methods to access and check the camera

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gerry.photoshare">
 
+    <uses-permission
+        android:name="android.permission.CAMERA"
+        />
+
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        />
+    
+    <uses-permission
+        android:name="android.permission.RECORD_AUDIO"
+        />
+
+    <uses-permission
+        android:name="android.permission.ACCESS_FINE_LOCATION"
+        />
+
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        />
+
+    <uses-feature
+        android:name="android.hardware.camera" android:required = "false"
+        />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".takePhoto"></activity>
     </application>
 
 </manifest>
