--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gerry.photoshare">
+    package="com.example.gerry.cloudcapture">
+    <uses-feature android:name="android.hardware.camera"  android:required="true"></uses-feature>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-    <uses-permission
-        android:name="android.permission.CAMERA"
-        />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        />
+</manifest>
 
-    <uses-permission
-        android:name="android.permission.RECORD_AUDIO"
-        />
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+        package="com.example.gerry.cloudcapture">
 
-    <uses-permission
-        android:name="android.permission.ACCESS_FINE_LOCATION"
-        />
+        <uses-permission
+            android:name="android.permission.CAMERA"
+            ></uses-permission>
 
-    <uses-feature
-        android:name="android.hardware.location.gps"
-        />
+        <uses-permission
+            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+            ></uses-permission>
 
-    <uses-feature
-        android:name="android.hardware.camera" android:required = "false"
-        />
+        <uses-permission
+            android:name="android.permission.RECORD_AUDIO"
+            ></uses-permission>
+
+        <uses-permission
+            android:name="android.permission.ACCESS_FINE_LOCATION"
+            ></uses-permission>
+
+        <uses-feature
+            android:name="android.hardware.location.gps"
+            ></uses-feature>
+
+        <uses-feature android:name="android.hardware.camera" android:required = "true" />
 
     <application
         android:allowBackup="true"
@@ -33,25 +54,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CameraActivity"
-            android:label="@string/app_name"
-
-            android:screenOrientation="landscape">
-            <!-- configure this activity to use landscape orientation -->
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".PhotoCapture">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".takePhoto"></activity>
     </application>
 
-</manifest>
+    </manifest>
+    -->
